@@ -321,7 +321,6 @@ raw_ore=Raw Ore
 
 # Compact frame
 switch_to_main_view=Switch to main view\n- Press __CONTROL__fp_toggle_compact_view__ to switch -
-compact_recipe_subfloor_tt=[font=default-semibold][color=#84CDEC]Left-click[/color][/font] to open the subfloor
 
 # Clipboard
 copied_into_clipboard=__1__ copied
